discussion/kv_engine/154545/154545_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38476: Update spdlog to v1.8.5 (KV)

Update spdlog to v1.8.5. This patch contains two things:

1) Fixes for the API updates between v1.1.0 and v1.8.5.
2) Changes to deal with the spdlog registry holding shared_ptrs
   (changes had been made to the old version to have the spdlog
   registry hold weak_ptrs). These include removing the dtor of
   BucketLogger to avoid recursive locking of the mutex in the
   spdlog registry and removal of the manual globalBucketLogger
   resets.

Change-Id: I81db06c75f63e8c0f56f410fc24c716549bbabc6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-05-28 09:52:04.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-28 10:46:05.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9276/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9276/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9276/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30912/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7857/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36193/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10976/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11239/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10831/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18806/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9901/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-28 10:56:49.000000000
Message: 
Patch Set 7:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9281/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9281/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9281/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30912/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7857/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36193/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10976/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11239/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10831/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18806/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9901/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-05-28 13:26:53.000000000
Message: 
Patch Set 7: Verified+1

linked to tlm patch by change ID. Overriding clang_tidy failure as it fails a no-op change to mock_bucket_logger.h without any other change to spdlog (MB-46631)
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-05-28 13:26:55.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-02 08:25:48.000000000
Message: 
Patch Set 7: Code-Review-1

(2 comments)
Line:25, logger/custom_rotating_file_sink.cc -> Check with richard, but I think this should be something like <gsl-lite/gsl-lite.h> (he's migrating to the "current" naming).

Line:24, logger/spdlogger.cc -> If we end up needing the "main" spdlog.h header, do we need all the individual ones also here?

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-02 08:44:36.000000000
MISMATCHED INLINE COMMENT
Line:25, logger/custom_rotating_file_sink.cc -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-02 08:44:36.000000000
MISMATCHED INLINE COMMENT
Line:24, logger/spdlogger.cc -> Yeah
----------------------------------------------------------------------------------------------------------------------
